# cv

.github/workflows/: blank.yml
AutoKey/: CMakeLists.txt
AutoKey/Source/: KeyDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SmartKeyLift.h
AutoTune11/: CMakeLists.txt
AutoTune11/Source/: GraphMode.h  HarmonyPlayer.h  PitchProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleSystem.h  ZeroLatencyDSP.h
